# harmony

./: .cursorindexingignore  .cursorrules  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  PHASE_B1_SHADOW_LOW_RISK.md  PHASE_B_SHADOW_LOW_RISK.md  README.md  eslint.config.js  langgraph.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json
.claude/: settings.json
.claude/commands/: octon-proposal-generate-packet-correction-prompt.md  octon-proposal-generate-packet-verification-prompt.md  octon-proposal-generate-program-closeout-prompt.md  octon-proposal-packet-closeout.md  octon-proposal-review-program.md  octon-proposal-revise-packet.md  octon-proposal-revise-program.md
.claude/skills/: audit-charter  audit-migration
.codex/commands/: alignment-check.md  octon-pack-scaffolder-create-context-doc.md  octon-pack-scaffolder-create-prompt-bundle.md  octon-proposal-closeout-program.md  octon-proposal-create-program.md  octon-proposal-explain-program.md  octon-proposal-generate-program-verification-prompt.md  octon-proposal-packet-revise-program.md  octon-proposal-packet-run-program-lifecycle.md  octon-proposal-packet.md  octon-proposal-run-packet-lifecycle.md  octon-proposal-run-program-lifecycle.md
.codex/skills/: audit-domain-architecture  (+5 more)
.design-packages/: README.md  registry.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.harmony/: AGENTS.md  CHARTER.md  OBJECTIVE.md  README.md  START.md  catalog.md  conventions.md  harmony.yml  init.sh  scope.md
.husky/: commit-msg
.octon/: README.md  START.md  octon.yml
.workspace/: catalog.md
agents/runner/runtime/: __init__.py  pyproject.toml  server.py
agents/runner/runtime/__tests__/: __init__.py  test_server.py
agents/runner/runtime/architecture_assessment/: analysis.py  graph.py  parsing.py  run.py  state.py
agents/runner/runtime/architecture_assessment/__tests__/: test_graph.py  test_parsing.py  test_run.py
agents/runner/runtime/assessment/: __init__.py  graph.py  graph_factory.py  parsing.py  paths.py  run.py  state.py  studio_entry.py
agents/runner/runtime/assessment/__tests__/: __init__.py  test_analysis.py  test_graph.py  test_parsing.py  test_run.py
apps/ai-gateway/: README.md  package.json  pyproject.toml
apps/ai-gateway/app/: __init__.py  main.py  otel.py  schemas.py
apps/ai-gateway/tests/: test_health.py
docs/: GLOSSARY.md  SHIPPING.md  principles.md
scripts/: check-flowkit-paths.js  harmony-swarm.sh  install-cursor-harmony-theme.js  normalize-commit-msg.js
secondaries/: architect-prompt.md
(+5502 files in other folders)
