[project]
name = "flowkit-runtime"
version = "0.0.1"
description = "FlowKit runtime implementations (LangGraph flows)"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "pydantic==2.12.4",
  "pyyaml>=6.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "mypy>=1.12",
  "ruff>=0.6",
  "black>=24.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "slow: marks tests that perform end-to-end runs",
]

